# TinyGPT

./: .gitignore  ARCHITECTURE.md  README.md  chat.py  config.json  dpo.py  lora_train.py  pretrain.py  pyproject.toml  sft.py
datasets/balzac/: balzac-euginie.txt  balzac_La Maison-du-Chat.txt  balzac_comedie1.txt
datasets/hugo/: 93.txt  contemplations-today.txt  dernier_jour.txt  homme-qui-rit.txt  misérables_i.txt  misérables_ii.txt  misérables_iii.txt  misérables_iv.txt  misérables_v.txt  notre_dame.txt
datasets/training/: dpo_preference_pairs.json  sft_qa_pairs.json
docs/: attention_qkv_explained.md  improvements.md  kv_cache_explained.md  llm_pipeline_summary.md  refactoring_plan.md
notebooks/: train_full_pipeline.ipynb
tinygpt/: __init__.py  checkpoint.py  data.py  device.py  generate.py  lora.py  model.py  tokenizer.py
