[project]
name = "tinygpt"
version = "1.0.0"
description = "A minimal GPT-2 implementation for learning the full LLM pipeline: pre-training, SFT, DPO, and LoRA"
readme = "docs/llm_pipeline_summary.md"
requires-python = ">=3.12"
dependencies = [
    "torch>=2.0.0",
    "numpy>=1.24.0",
]

[dependency-groups]
dev = [
    "pyright>=1.1.400",
    "ruff>=0.9.0",
]

[tool.ruff]
target-version = "py312"
line-length = 110

[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP", "B", "SIM", "RUF"]
ignore = [
    "RUF002",  # ambiguous unicode chars in comments/docstrings (×, β, → are intentional in teaching comments)
    "RUF001",  # same for strings
    "RUF003",  # same for comments
    "RUF005",  # list concatenation is clearer than unpacking for token building
    "RUF059",  # unused unpacked vars (B, T = x.shape is conventional in PyTorch)
]

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "standard"
